
next:
          - add new Thruk2 theme
          - add broadcast system
          - support opening server actions in new tabs
          - support service lists for recurring downtimes
          - fix livestatus "Operator !~~ for lists not implemented." issue when having an empty search filter
          - set contactgroups as REMOTE_USER_GROUPS into the environment for hooks and scripts
          - fix macro expansion with recursive args (#658)
          - fix forcing logcache to myisam (#691)
          - Business Process:
            - add support for simple wildcards, ex.: host:*
            - add link to all input hosts/services
            - add link to referenced business process if node links to another bp
            - support regular expressions in service details link
            - fix dropdown not being clickable
            - fix selecting nodes for edit (#682)
          - Panorama View:
            - honor acknowledgement and downtime status shape color calculation
            - add option for fixed positioned popups
            - fix shape color for host problems in group/dashboard panels
            - fix saving column width for grid panels
          - Reports:
            - hide program messages from reports by default, can be changed back by report_include_class2 = 2
          - Statusmap:
            - allow grouping by custom variable exposed by show_custom_vars

2.12-3   Tue Dec 20 20:43:54 CET 2016
          - fix js error on status page
          - Config Tool:
            - fix http backends when using lmd

2.12-2   Mon Nov 28 14:49:12 CET 2016
          - add downtime_max_duration option
          - fix glitch in column drag/drop
          - fix missing jquery in mobile view (#653)
          - fix redirect issue when omd site is named 'thruk'

2.12     Fri Nov 18 10:14:00 CET 2016
          - remove startup page, Thruk starts in less than a second now
          - add adjustable status details columns / dynamic views