@@ -7,6 +7,7 @@ next:
           - support service lists for recurring downtimes
           - fix livestatus "Operator !~~ for lists not implemented." issue when having an empty search filter
           - set contactgroups as REMOTE_USER_GROUPS into the environment for hooks and scripts
+          - add basic filters to notifications page (#692)
           - fix macro expansion with recursive args (#658)
           - fix forcing logcache to myisam (#691)
           - Business Process:
